Fixed "Invalid Cursor"
Fixed the "Invalid Cursor" error where multi-page requests were being
made. Added support for editing a user's profile description.

--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -70,7 +70,7 @@
     <Compile Include="Utilities\PagingUtil.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Api\Internal\TwitchApiInternal.Async.cs" />
+    <Compile Include="Api\Internal\TwitchApiInternal.cs" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
