Added client id api variants.
Added method variants to the api that use client ids instead of tokens
to authenticate requests.

--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -47,6 +47,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Api\TwitchApi.Sync.cs" />
+    <Compile Include="Api\TwitchApi.Async.cs" />
     <Compile Include="Api\TwitchApiOauth.Sync.cs" />
     <Compile Include="Api\TwitchApiOauth.Async.cs" />
     <Compile Include="Debug\Error.cs" />
