--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -54,16 +54,30 @@
     <Compile Include="Debug\Error.cs" />
     <Compile Include="Debug\Log.cs" />
     <Compile Include="Enums\Api\Authentication.cs" />
-    <Compile Include="Enums\Api\BroadcasterType.cs" />
-    <Compile Include="Enums\Api\UserType.cs" />
+    <Compile Include="Enums\Api\Streams\StreamLanguage.cs" />
+    <Compile Include="Enums\Api\Streams\StreamType.cs" />
+    <Compile Include="Enums\Api\Users\BroadcasterType.cs" />
+    <Compile Include="Enums\Api\Users\UserType.cs" />
     <Compile Include="Enums\Debug\LogLevel.cs" />
     <Compile Include="Enums\Debug\TimeStamp.cs" />
     <Compile Include="Enums\Extensions\Padding.cs" />
-    <Compile Include="Extensions\UniversalExtensions.cs" />
+    <Compile Include="Enums\Helpers\Paging\UnderscoreHandling.cs" />
+    <Compile Include="Extensions\MathExtensions .cs" />
+    <Compile Include="Extensions\TypeExtensions.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Extensions\ReflectionExtensions.cs" />
+    <Compile Include="Extensions\ValidationExtensions.cs" />
     <Compile Include="Helpers\Json\JsonDeserializer.cs" />
-    <Compile Include="Helpers\Paging\PagingPropertyAttribute.cs" />
-    <Compile Include="Helpers\Paging\Users\FollowsParameters.cs" />
+    <Compile Include="Helpers\Paging\QueryEnum.cs" />
+    <Compile Include="Helpers\Paging\QueryComparable.cs" />
+    <Compile Include="Helpers\Paging\QueryString.cs" />
+    <Compile Include="Helpers\Paging\QueryList.cs" />
+    <Compile Include="Helpers\Paging\QueryParameterAttribute.cs" />
+    <Compile Include="Helpers\Paging\Streams\StreamsQueryParameters.cs" />
+    <Compile Include="Helpers\Paging\Users\FollowsQueryParameters.cs" />
     <Compile Include="Models\Api\Pagination.cs" />
+    <Compile Include="Models\Api\Streams\Streams.cs" />
+    <Compile Include="Models\Api\Streams\Stream.cs" />
     <Compile Include="Models\Api\Users\Follow.cs" />
     <Compile Include="Models\Api\Users\Follows.cs" />
     <Compile Include="Models\Api\Users\User.cs" />
