--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -53,7 +53,7 @@
     <Compile Include="Api\TwitchApiOauth.Async.cs" />
     <Compile Include="Debug\Error.cs" />
     <Compile Include="Debug\Log.cs" />
-    <Compile Include="Enums\Api\Authentication.cs" />
+    <Compile Include="Enums\Utilities\Authentication.cs" />
     <Compile Include="Enums\Api\Streams\StreamLanguage.cs" />
     <Compile Include="Enums\Api\Streams\StreamType.cs" />
     <Compile Include="Enums\Api\Users\BroadcasterType.cs" />
@@ -61,6 +61,7 @@
     <Compile Include="Enums\Debug\LogLevel.cs" />
     <Compile Include="Enums\Debug\TimeStamp.cs" />
     <Compile Include="Enums\Extensions\Padding.cs" />
+    <Compile Include="Extensions\DateTimeExtensions.cs" />
     <Compile Include="Extensions\MathExtensions .cs" />
     <Compile Include="Extensions\EnumExtensions.cs" />
     <Compile Include="Extensions\TypeExtensions.cs" />
@@ -70,20 +71,27 @@
     <Compile Include="Helpers\Json\JsonDeserializer.cs" />
     <Compile Include="Helpers\Paging\QueryEnum.cs" />
     <Compile Include="Helpers\Paging\QueryComparable.cs" />
-    <Compile Include="Helpers\Paging\QueryString.cs" />
+    <Compile Include="Helpers\Paging\QueryParameter.cs" />
     <Compile Include="Helpers\Paging\QueryList.cs" />
     <Compile Include="Helpers\Paging\QueryParameterAttribute.cs" />
     <Compile Include="Helpers\Paging\Streams\StreamsQueryParameters.cs" />
     <Compile Include="Helpers\Paging\Users\FollowsQueryParameters.cs" />
+    <Compile Include="Interfaces\Api\ITwitchResponse.cs" />
+    <Compile Include="Interfaces\Helpers\Paging\ITwitchQueryParameters.cs" />
+    <Compile Include="Interfaces\Helpers\Paging\ITwitchPage.cs" />
     <Compile Include="Models\Api\Pagination.cs" />
+    <Compile Include="Models\Api\TwitchError.cs" />
+    <Compile Include="Models\Api\TwitchResponse.cs" />
     <Compile Include="Models\Api\Streams\Streams.cs" />
     <Compile Include="Models\Api\Streams\Stream.cs" />
     <Compile Include="Models\Api\Users\Follow.cs" />
     <Compile Include="Models\Api\Users\Follows.cs" />
     <Compile Include="Models\Api\Users\User.cs" />
     <Compile Include="Models\Api\Users\Users.cs" />
+    <Compile Include="Models\Api\RateLimit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\PagingUtil.cs" />
+    <Compile Include="Utilities\RestRequestUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Api\Internal\TwitchApiInternal.cs" />
