Code organization and begining re-testing endpoints

--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -69,13 +69,13 @@
     <Compile Include="Extensions\ReflectionExtensions.cs" />
     <Compile Include="Extensions\ValidationExtensions.cs" />
     <Compile Include="Helpers\Json\JsonDeserializer.cs" />
-    <Compile Include="Helpers\Paging\QueryEnum.cs" />
-    <Compile Include="Helpers\Paging\QueryComparable.cs" />
-    <Compile Include="Helpers\Paging\QueryParameter.cs" />
-    <Compile Include="Helpers\Paging\QueryList.cs" />
-    <Compile Include="Helpers\Paging\QueryParameterAttribute.cs" />
-    <Compile Include="Helpers\Paging\Streams\StreamsQueryParameters.cs" />
-    <Compile Include="Helpers\Paging\Users\FollowsQueryParameters.cs" />
+    <Compile Include="Models\Paging\QueryEnum.cs" />
+    <Compile Include="Models\Paging\QueryComparable.cs" />
+    <Compile Include="Models\Paging\QueryParameter.cs" />
+    <Compile Include="Models\Paging\QueryList.cs" />
+    <Compile Include="Models\Paging\QueryParameterAttribute.cs" />
+    <Compile Include="Models\Paging\Streams\StreamsQueryParameters.cs" />
+    <Compile Include="Models\Paging\Users\FollowsQueryParameters.cs" />
     <Compile Include="Interfaces\Api\ITwitchResponse.cs" />
     <Compile Include="Interfaces\Helpers\Paging\ITwitchQueryParameters.cs" />
     <Compile Include="Interfaces\Helpers\Paging\ITwitchPage.cs" />
