Implemented Metadata endpoint, refactoring, more tetsing
The streams/metadata endpoint has been implemented. Models have been
refactored to be more consistent across multiple endpoints. All API
methods for except for OAuth.Async have been removed until due to
frequent changes to naming and documentation. They will be added back
when testing is done.

--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -69,6 +69,13 @@
     <Compile Include="Extensions\ReflectionExtensions.cs" />
     <Compile Include="Extensions\ValidationExtensions.cs" />
     <Compile Include="Helpers\Json\JsonDeserializer.cs" />
+    <Compile Include="Models\Api\Streams\Hearthstone.cs" />
+    <Compile Include="Models\Api\Streams\HearthstoneHero.cs" />
+    <Compile Include="Models\Api\Streams\MetadataPage.cs" />
+    <Compile Include="Models\Api\Streams\Player.cs" />
+    <Compile Include="Models\Api\Streams\OverwatchHero.cs" />
+    <Compile Include="Models\Api\Streams\Overwatch.cs" />
+    <Compile Include="Models\Api\Streams\Metadata.cs" />
     <Compile Include="Models\Paging\QueryEnum.cs" />
     <Compile Include="Models\Paging\QueryComparable.cs" />
     <Compile Include="Models\Paging\QueryParameter.cs" />
@@ -82,12 +89,12 @@
     <Compile Include="Models\Api\Pagination.cs" />
     <Compile Include="Models\Api\TwitchError.cs" />
     <Compile Include="Models\Api\TwitchResponse.cs" />
-    <Compile Include="Models\Api\Streams\Streams.cs" />
+    <Compile Include="Models\Api\Streams\StreamPage.cs" />
     <Compile Include="Models\Api\Streams\Stream.cs" />
     <Compile Include="Models\Api\Users\Follow.cs" />
-    <Compile Include="Models\Api\Users\Follows.cs" />
+    <Compile Include="Models\Api\Users\FollowPage.cs" />
     <Compile Include="Models\Api\Users\User.cs" />
-    <Compile Include="Models\Api\Users\Users.cs" />
+    <Compile Include="Models\Api\Users\UserPage.cs" />
     <Compile Include="Models\Api\RateLimit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\PagingUtil.cs" />
