--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -54,7 +54,8 @@
     <Compile Include="Debug\Error.cs" />
     <Compile Include="Debug\Log.cs" />
     <Compile Include="Enums\Api\Entitlements\EntitlementType.cs" />
-    <Compile Include="Enums\Utilities\TooManyRequestsHandling.cs" />
+    <Compile Include="Enums\Helpers\Api\InternalServerErrorHandling.cs" />
+    <Compile Include="Enums\Helpers\Api\TooManyRequestsHandling.cs" />
     <Compile Include="Enums\Utilities\Authentication.cs" />
     <Compile Include="Enums\Api\Streams\StreamLanguage.cs" />
     <Compile Include="Enums\Api\Streams\StreamType.cs" />
@@ -86,11 +87,10 @@
     <Compile Include="Models\Api\Streams\Overwatch.cs" />
     <Compile Include="Models\Api\Streams\Metadata.cs" />
     <Compile Include="Models\Paging\Entitlement\EntitlementQueryParameters.cs.cs" />
-    <Compile Include="Models\Paging\QueryEnum.cs" />
-    <Compile Include="Models\Paging\QueryComparable.cs" />
+    <Compile Include="Helpers\ClampedNumber.cs" />
     <Compile Include="Models\Paging\QueryParametersPage.cs" />
     <Compile Include="Models\Paging\QueryParameter.cs" />
-    <Compile Include="Models\Paging\QueryList.cs" />
+    <Compile Include="Helpers\ClampedList.cs" />
     <Compile Include="Models\Paging\QueryParameterAttribute.cs" />
     <Compile Include="Models\Paging\Streams\StreamsQueryParameters.cs" />
     <Compile Include="Models\Paging\Users\FollowsQueryParameters.cs" />
@@ -103,7 +103,7 @@
     <Compile Include="Models\Api\Users\Follow.cs" />
     <Compile Include="Models\Api\Users\User.cs" />
     <Compile Include="Models\Api\RateLimit.cs" />
-    <Compile Include="Models\Utilities\TwitchRequestSettings.cs" />
+    <Compile Include="Helpers\Api\ApiRequestSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\PagingUtil.cs" />
     <Compile Include="Utilities\RestRequestUtil.cs" />
