--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -54,15 +54,18 @@
     <Compile Include="Debug\Error.cs" />
     <Compile Include="Debug\Log.cs" />
     <Compile Include="Enums\Api\Entitlements\EntitlementType.cs" />
-    <Compile Include="Enums\Helpers\Api\InternalServerErrorHandling.cs" />
-    <Compile Include="Enums\Helpers\Api\TooManyRequestsHandling.cs" />
-    <Compile Include="Enums\Utilities\Authentication.cs" />
+    <Compile Include="Enums\Api\Videos\VideoLanguage.cs" />
+    <Compile Include="Enums\Api\InternalServerErrorHandling.cs" />
+    <Compile Include="Enums\Api\TooManyRequestsHandling.cs" />
     <Compile Include="Enums\Api\Streams\StreamLanguage.cs" />
     <Compile Include="Enums\Api\Streams\StreamType.cs" />
     <Compile Include="Enums\Api\Users\BroadcasterType.cs" />
     <Compile Include="Enums\Api\Users\UserType.cs" />
     <Compile Include="Enums\Debug\LogLevel.cs" />
     <Compile Include="Enums\Debug\TimeStamp.cs" />
+    <Compile Include="Enums\Api\Videos\VideoType.cs" />
+    <Compile Include="Enums\Api\Videos\VideoSort.cs" />
+    <Compile Include="Enums\Api\Videos\VideoPeriod.cs" />
     <Compile Include="Extensions\DateTimeExtensions.cs" />
     <Compile Include="Extensions\MathExtensions .cs" />
     <Compile Include="Extensions\EnumExtensions.cs" />
@@ -77,7 +80,7 @@
     <Compile Include="Interfaces\Api\IApiData.cs" />
     <Compile Include="Models\Api\ApiResponseValue.cs" />
     <Compile Include="Models\Api\ApiResponsePage.cs" />
-    <Compile Include="Models\Api\Entitlement\Url.cs" />
+    <Compile Include="Models\Api\Entitlements\Url.cs" />
     <Compile Include="Models\Api\ApiDataPage.cs" />
     <Compile Include="Models\Api\ApiData.cs" />
     <Compile Include="Models\Api\Streams\Hearthstone.cs" />
@@ -86,16 +89,19 @@
     <Compile Include="Models\Api\Streams\OverwatchHero.cs" />
     <Compile Include="Models\Api\Streams\Overwatch.cs" />
     <Compile Include="Models\Api\Streams\Metadata.cs" />
-    <Compile Include="Models\Paging\Entitlement\EntitlementQueryParameters.cs.cs" />
+    <Compile Include="Models\Api\Games\Game.cs" />
+    <Compile Include="Models\Api\Videos\Video.cs" />
+    <Compile Include="Models\Api\Entitlements\EntitlementQueryParameters.cs.cs" />
     <Compile Include="Helpers\ClampedNumber.cs" />
-    <Compile Include="Models\Paging\QueryParametersPage.cs" />
-    <Compile Include="Models\Paging\QueryParameter.cs" />
+    <Compile Include="Models\Api\Games\GamesQueryParameters.cs" />
+    <Compile Include="Models\Api\QueryParametersPage.cs" />
+    <Compile Include="Models\Api\QueryParameter.cs" />
     <Compile Include="Helpers\ClampedList.cs" />
-    <Compile Include="Models\Paging\QueryParameterAttribute.cs" />
-    <Compile Include="Models\Paging\Streams\StreamsQueryParameters.cs" />
-    <Compile Include="Models\Paging\Users\FollowsQueryParameters.cs" />
+    <Compile Include="Models\Api\QueryParameterAttribute.cs" />
+    <Compile Include="Models\Api\Streams\StreamsQueryParameters.cs" />
+    <Compile Include="Models\Api\Users\FollowsQueryParameters.cs" />
     <Compile Include="Interfaces\Api\IApiResponse.cs" />
-    <Compile Include="Interfaces\Models\Paging\IQueryParametersPage.cs" />
+    <Compile Include="Interfaces\Api\IQueryParametersPage.cs" />
     <Compile Include="Models\Api\Pagination.cs" />
     <Compile Include="Models\Api\ApiError.cs" />
     <Compile Include="Models\Api\ApiResponse.cs" />
@@ -103,13 +109,15 @@
     <Compile Include="Models\Api\Users\Follow.cs" />
     <Compile Include="Models\Api\Users\User.cs" />
     <Compile Include="Models\Api\RateLimit.cs" />
-    <Compile Include="Helpers\Api\ApiRequestSettings.cs" />
+    <Compile Include="Models\Api\ApiRequestSettings.cs" />
+    <Compile Include="Models\Api\Users\UsersQueryParameters.cs" />
+    <Compile Include="Models\Api\Videos\VideosQueryParameters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\PagingUtil.cs" />
     <Compile Include="Utilities\RestRequestUtil.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Api\Internal\TwitchApiInternal.cs" />
+    <Compile Include="Api\TwitchApiInternal.cs" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
