Code refactoring and error testing.
Spelling errors were corrected. ArgumentOutOfRange exception from the
EntitlementQueryParameters.manifest_id parameter was moved to the
internal execution API method. Testing on the API handling settings was
performed with positive results.

--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -98,7 +98,7 @@
     <Compile Include="Models\Api\Streams\Metadata.cs" />
     <Compile Include="Models\Api\Games\Game.cs" />
     <Compile Include="Models\Api\Videos\Video.cs" />
-    <Compile Include="Models\Api\Entitlements\EntitlementQueryParameters.cs.cs" />
+    <Compile Include="Models\Api\Entitlements\EntitlementQueryParameters.cs" />
     <Compile Include="Helpers\ClampedNumber.cs" />
     <Compile Include="Models\Api\Games\GamesQueryParameters.cs" />
     <Compile Include="Models\Api\QueryParametersPage.cs" />
