--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -80,15 +80,11 @@
     <Compile Include="Extensions\ReflectionExtensions.cs" />
     <Compile Include="Extensions\ValidationExtensions.cs" />
     <Compile Include="Helpers\Json\JsonDeserializer.cs" />
-    <Compile Include="Interfaces\Api\IApiResponseValue.cs" />
-    <Compile Include="Interfaces\Api\IApiResponsePage.cs" />
-    <Compile Include="Interfaces\Api\IApiDataPage.cs" />
-    <Compile Include="Interfaces\Api\IApiData.cs" />
-    <Compile Include="Models\Api\ApiResponseValue.cs" />
-    <Compile Include="Models\Api\ApiResponsePage.cs" />
+    <Compile Include="Interfaces\Api\IDataPage.cs" />
+    <Compile Include="Interfaces\Api\IData.cs" />
     <Compile Include="Models\Api\Entitlements\Url.cs" />
-    <Compile Include="Models\Api\ApiDataPage.cs" />
-    <Compile Include="Models\Api\ApiData.cs" />
+    <Compile Include="Models\Api\DataPage.cs" />
+    <Compile Include="Models\Api\Data.cs" />
     <Compile Include="Models\Api\Headers.cs" />
     <Compile Include="Models\Api\StatusHandlingSettings.cs" />
     <Compile Include="Models\Api\Streams\Hearthstone.cs" />
