Combined reader and message processing thread. Implemented IRC parser.
The reader and messagr processing threads were combined into one. This
was done to reduce system resources and because execution is fast enough
to combine without worrying about blocking.

Raw messages can now be parsed into an IrcMessage.

--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Models\Api\ApiRequestSettings.cs" />
     <Compile Include="Models\Api\Users\UsersQueryParameters.cs" />
     <Compile Include="Models\Api\Videos\VideosQueryParameters.cs" />
+    <Compile Include="Models\Clients\Irc\IrcMessage.cs" />
     <Compile Include="Models\Clients\Irc\IrcUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\ExceptionUtil.cs" />
