Tweaked the reader and started handler implementation.
The reader can now properly handle \r, \n, and \r\n with respect to new
lines. A rough form of message handlers for the IrcClient have been
implemented.

--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Api\TwitchApi.Async.cs" />
     <Compile Include="Api\TwitchApiBearer.Sync.cs" />
     <Compile Include="Api\TwitchApiBearer.Async.cs" />
+    <Compile Include="Clients\Irc\IrcClient.Handlers.cs" />
     <Compile Include="Clients\Irc\IrcClient.cs" />
     <Compile Include="Debug\Error.cs" />
     <Compile Include="Debug\Log.cs" />
