--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -64,11 +64,15 @@
     <Compile Include="Debug\Log.cs" />
     <Compile Include="Enums\Api\Entitlements\EntitlementType.cs" />
     <Compile Include="Enums\Clients\ClientState.cs" />
+    <Compile Include="Enums\Clients\Irc\Twitch\RitualType.cs" />
+    <Compile Include="Enums\Clients\Irc\Twitch\SubscriptionPlan.cs" />
+    <Compile Include="Enums\Clients\Irc\Twitch\UserNoticeType.cs" />
+    <Compile Include="Enums\Clients\Irc\Twitch\RoomState.cs" />
     <Compile Include="Enums\Clients\Irc\Twitch\BadgeType.cs" />
     <Compile Include="Enums\InputHandling.cs" />
     <Compile Include="Enums\ErrorHandling.cs" />
     <Compile Include="Enums\Api\StatusHandling.cs" />
-    <Compile Include="Enums\Api\Videos\VideoLanguage.cs" />
+    <Compile Include="Enums\Api\Videos\BroadcasterLanguage.cs" />
     <Compile Include="Enums\Api\Streams\StreamLanguage.cs" />
     <Compile Include="Enums\Api\Streams\StreamType.cs" />
     <Compile Include="Enums\Api\Users\BroadcasterType.cs" />
@@ -79,6 +83,13 @@
     <Compile Include="Enums\Api\Videos\VideoSort.cs" />
     <Compile Include="Enums\Api\Videos\VideoPeriod.cs" />
     <Compile Include="Events\Clients\Irc\ChannelOperatorEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\RitualEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\RaidEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\SubscriberEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\UserNoticeEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\RoomStateEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\GlobalUserStateEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\ClearChatEventArgs.cs" />
     <Compile Include="Events\Clients\Irc\Twitch\TwitchPrivmsgEventArgs.cs" />
     <Compile Include="Events\Clients\Irc\UserModeEventArgs.cs" />
     <Compile Include="Events\Clients\Irc\EndOfNamesEventArgs.cs" />
@@ -152,6 +163,7 @@
     <Compile Include="Models\Clients\Irc\Twitch\Badge.cs" />
     <Compile Include="Models\Clients\Irc\Twitch\TwitchPrivmsg.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\EnumCacheUtil.cs" />
     <Compile Include="Utilities\ExceptionUtil.cs" />
     <Compile Include="Utilities\PagingUtil.cs" />
     <Compile Include="Utilities\RestRequestUtil.cs" />
