--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -66,8 +66,10 @@
     <Compile Include="Enums\Clients\ClientState.cs" />
     <Compile Include="Enums\Clients\Irc\Twitch\RitualType.cs" />
     <Compile Include="Enums\Clients\Irc\Twitch\SubscriptionPlan.cs" />
+    <Compile Include="Enums\Clients\Irc\Twitch\HostTargetType.cs" />
+    <Compile Include="Enums\Clients\Irc\Twitch\NoticeType.cs" />
     <Compile Include="Enums\Clients\Irc\Twitch\UserNoticeType.cs" />
-    <Compile Include="Enums\Clients\Irc\Twitch\RoomState.cs" />
+    <Compile Include="Enums\Clients\Irc\Twitch\RoomStateType.cs" />
     <Compile Include="Enums\Clients\Irc\Twitch\BadgeType.cs" />
     <Compile Include="Enums\InputHandling.cs" />
     <Compile Include="Enums\ErrorHandling.cs" />
@@ -83,6 +85,8 @@
     <Compile Include="Enums\Api\Videos\VideoSort.cs" />
     <Compile Include="Enums\Api\Videos\VideoPeriod.cs" />
     <Compile Include="Events\Clients\Irc\ChannelOperatorEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\HostTargetEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\UserStateEventArgs.cs" />
     <Compile Include="Events\Clients\Irc\Twitch\RitualEventArgs.cs" />
     <Compile Include="Events\Clients\Irc\Twitch\RaidEventArgs.cs" />
     <Compile Include="Events\Clients\Irc\Twitch\SubscriberEventArgs.cs" />
