--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Debug\Log.cs" />
     <Compile Include="Enums\Api\Entitlements\EntitlementType.cs" />
     <Compile Include="Enums\Clients\ClientState.cs" />
+    <Compile Include="Enums\Clients\Irc\Twitch\PrivmsgSource.cs" />
     <Compile Include="Enums\Clients\Irc\Twitch\RitualType.cs" />
     <Compile Include="Enums\Clients\Irc\Twitch\SubscriptionPlan.cs" />
     <Compile Include="Enums\Clients\Irc\Twitch\HostTargetType.cs" />
@@ -85,8 +86,19 @@
     <Compile Include="Enums\Api\Videos\VideoSort.cs" />
     <Compile Include="Enums\Api\Videos\VideoPeriod.cs" />
     <Compile Include="Events\Clients\Irc\ChannelOperatorEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\ChatRoomPartEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\ChatRoomJoinEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\ChatRoomNamReplyEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\ChatRoonEndOfNamesEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\ChatRoomNoticeEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\ChatRoomClearChatEventArgs.cs" />
     <Compile Include="Events\Clients\Irc\Twitch\NoticeEventArgs.cs" />
     <Compile Include="Events\Clients\Irc\Twitch\HostTargetEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\GiftedSubscriberEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\ChatRoomPrivmsgEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\ChatRoomUserStateEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\ChatRoomRoomStateEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\WhisperEventArgs.cs" />
     <Compile Include="Events\Clients\Irc\Twitch\UserStateEventArgs.cs" />
     <Compile Include="Events\Clients\Irc\Twitch\RitualEventArgs.cs" />
     <Compile Include="Events\Clients\Irc\Twitch\RaidEventArgs.cs" />
@@ -95,7 +107,7 @@
     <Compile Include="Events\Clients\Irc\Twitch\RoomStateEventArgs.cs" />
     <Compile Include="Events\Clients\Irc\Twitch\GlobalUserStateEventArgs.cs" />
     <Compile Include="Events\Clients\Irc\Twitch\ClearChatEventArgs.cs" />
-    <Compile Include="Events\Clients\Irc\Twitch\TwitchPrivmsgEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\StreamChatPrivmsgEventArgs.cs" />
     <Compile Include="Events\Clients\Irc\UserModeEventArgs.cs" />
     <Compile Include="Events\Clients\Irc\EndOfNamesEventArgs.cs" />
     <Compile Include="Events\Clients\Irc\ChannelModeEventArgs.cs" />
@@ -120,6 +132,9 @@
     <Compile Include="Interfaces\Api\IDataPage.cs" />
     <Compile Include="Interfaces\Api\IData.cs" />
     <Compile Include="Interfaces\Clients\Irc\ITags.cs" />
+    <Compile Include="Interfaces\Clients\Irc\Twitch\ISharedRoomStateTags.cs" />
+    <Compile Include="Interfaces\Clients\Irc\Twitch\ISharedUserStateTags.cs" />
+    <Compile Include="Interfaces\Clients\Irc\Twitch\ISharedPrivmsgTags.cs" />
     <Compile Include="Models\Api\ApiResponseBundle.cs" />
     <Compile Include="Models\Api\Clips\ClipCreationQueryParameters.cs" />
     <Compile Include="Models\Api\Clips\CreatedClip.cs" />
@@ -163,8 +178,12 @@
     <Compile Include="Models\Api\Users\UsersQueryParameters.cs" />
     <Compile Include="Models\Api\Videos\VideosQueryParameters.cs" />
     <Compile Include="Models\Clients\Irc\IrcMessage.cs" />
-    <Compile Include="Models\Clients\Irc\Privmsg.cs" />
     <Compile Include="Models\Clients\Irc\IrcUser.cs" />
+    <Compile Include="Models\Clients\Irc\Twitch\GiftedSubscriberTags.cs" />
+    <Compile Include="Models\Clients\Irc\Twitch\ChatRoomPrivmsgTags.cs" />
+    <Compile Include="Models\Clients\Irc\Twitch\ChatRoomUserStateTags.cs" />
+    <Compile Include="Models\Clients\Irc\Twitch\ChatRoomRoomStateTags.cs" />
+    <Compile Include="Models\Clients\Irc\Twitch\WhisperTags.cs" />
     <Compile Include="Models\Clients\Irc\Twitch\UserStateTags.cs" />
     <Compile Include="Models\Clients\Irc\Twitch\RoomStateTags.cs" />
     <Compile Include="Models\Clients\Irc\Twitch\SubscriberTags.cs" />
@@ -176,8 +195,7 @@
     <Compile Include="Models\Clients\Irc\Twitch\Emote.cs" />
     <Compile Include="Models\Clients\Irc\Twitch\Badge.cs" />
     <Compile Include="Models\Clients\Irc\Twitch\ClearChatTags.cs" />
-    <Compile Include="Models\Clients\Irc\Twitch\TwitchPrivmsgTags.cs" />
-    <Compile Include="Models\Clients\Irc\Twitch\TwitchPrivmsg.cs" />
+    <Compile Include="Models\Clients\Irc\Twitch\StreamChatPrivmsgTags.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\EnumCacheUtil.cs" />
     <Compile Include="Utilities\ExceptionUtil.cs" />
