Added more events
Case specific events were added for various NOTICES.

--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -89,6 +89,25 @@
     <Compile Include="Enums\Api\Videos\VideoSort.cs" />
     <Compile Include="Enums\Api\Videos\VideoPeriod.cs" />
     <Compile Include="Events\Clients\Irc\ChannelOperatorEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\ChatRoomBadUnmodModEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\BadUnmodModEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\ChatRoomBadModModEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\BadModModEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\ChatRoomRoomModsEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\RoomModsEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\ChatRoomInvalidUserEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\InvalidUserEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\ChatRoomCmdsAvailableEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\CmdsAvailableEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\ChatRoomUnbanSuccessEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\UnbanSuccessEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\ChatRoomBadUnbanNoBanEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\BadUnbanNoBanEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\UnsupportedChatRoomCmdEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\HostsRemainingEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\BadHostRateExceededEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\BadHostHostingEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\ChatRoomAlreadyBannedEventArgs.cs" />
     <Compile Include="Events\Clients\Irc\Twitch\ChatRoomPartEventArgs.cs" />
     <Compile Include="Events\Clients\Irc\Twitch\ChatRoomJoinEventArgs.cs" />
     <Compile Include="Events\Clients\Irc\Twitch\ChatRoomNamReplyEventArgs.cs" />
@@ -101,6 +120,7 @@
     <Compile Include="Events\Clients\Irc\Twitch\ChatRoomPrivmsgEventArgs.cs" />
     <Compile Include="Events\Clients\Irc\Twitch\ChatRoomUserStateEventArgs.cs" />
     <Compile Include="Events\Clients\Irc\Twitch\ChatRoomRoomStateEventArgs.cs" />
+    <Compile Include="Events\Clients\Irc\Twitch\AlreadyBannedEventArgs.cs" />
     <Compile Include="Events\Clients\Irc\Twitch\WhisperEventArgs.cs" />
     <Compile Include="Events\Clients\Irc\Twitch\UserStateEventArgs.cs" />
     <Compile Include="Events\Clients\Irc\Twitch\RitualEventArgs.cs" />
