--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -62,8 +62,11 @@
     <Compile Include="Clients\Irc\TwitchIrcClient.Handlers.cs" />
     <Compile Include="Clients\Irc\TwitchIrcClient.cs" />
     <Compile Include="Debugger\Benchmark.cs" />
+    <Compile Include="Debugger\Debug.Writing.cs" />
     <Compile Include="Debugger\Error.cs" />
-    <Compile Include="Debugger\Debug.cs" />
+    <Compile Include="Debugger\Debug.Validation.cs" />
+    <Compile Include="Debugger\ValidateObjectAttribute.cs" />
+    <Compile Include="Debugger\ValidateMemberAttribute.cs" />
     <Compile Include="Enums\Api\Entitlements\EntitlementType.cs" />
     <Compile Include="Enums\Clients\ClientState.cs" />
     <Compile Include="Enums\Clients\Irc\Twitch\CommercialLength.cs" />
@@ -77,7 +80,8 @@
     <Compile Include="Enums\Clients\Irc\Twitch\UserNoticeType.cs" />
     <Compile Include="Enums\Clients\Irc\Twitch\RoomStateType.cs" />
     <Compile Include="Enums\Clients\Irc\Twitch\BadgeType.cs" />
-    <Compile Include="Enums\Debug\ErrorLevel.cs" />
+    <Compile Include="Enums\Debugger\ErrorLevel.cs" />
+    <Compile Include="Enums\Debugger\Check.cs" />
     <Compile Include="Enums\InputHandling.cs" />
     <Compile Include="Enums\ErrorHandling.cs" />
     <Compile Include="Enums\Api\StatusHandling.cs" />
@@ -87,8 +91,8 @@
     <Compile Include="Enums\Api\Users\BroadcasterType.cs" />
     <Compile Include="Enums\Api\ApiErrorSource.cs" />
     <Compile Include="Enums\UserType.cs" />
-    <Compile Include="Enums\Debug\DebugLevel.cs" />
-    <Compile Include="Enums\Debug\TimeStamp.cs" />
+    <Compile Include="Enums\Debugger\DebugLevel.cs" />
+    <Compile Include="Enums\Debugger\TimeStamp.cs" />
     <Compile Include="Enums\Api\Videos\VideoType.cs" />
     <Compile Include="Enums\Api\Videos\VideoSort.cs" />
     <Compile Include="Enums\Api\Videos\VideoPeriod.cs" />
@@ -209,7 +213,7 @@
     <Compile Include="Models\Api\Videos\VideosQueryParameters.cs" />
     <Compile Include="Models\Clients\Irc\IrcMessage.cs" />
     <Compile Include="Models\Clients\Irc\IrcUser.cs" />
-    <Compile Include="Models\Clients\Irc\TagAttribute.cs" />
+    <Compile Include="Debugger\ValidateTagAttribute.cs" />
     <Compile Include="Models\Clients\Irc\Twitch\GiftedSubscriberTags.cs" />
     <Compile Include="Models\Clients\Irc\Twitch\ChatRoomPrivmsgTags.cs" />
     <Compile Include="Models\Clients\Irc\Twitch\ChatRoomUserStateTags.cs" />
