--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -41,9 +41,6 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.ValueTuple.4.4.0\lib\net461\System.ValueTuple.dll</HintPath>
-    </Reference>
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -55,8 +52,8 @@
   <ItemGroup>
     <Compile Include="Api\TwitchApi.Sync.cs" />
     <Compile Include="Api\TwitchApi.Async.cs" />
-    <Compile Include="Api\TwitchApiBearer.Sync.cs" />
-    <Compile Include="Api\TwitchApiBearer.Async.cs" />
+    <Compile Include="Api\TwitchApiOAuth.Sync.cs" />
+    <Compile Include="Api\TwitchApiOAuth.Async.cs" />
     <Compile Include="Clients\Irc\IrcClient.Handlers.cs" />
     <Compile Include="Clients\Irc\IrcClient.cs" />
     <Compile Include="Clients\Irc\TwitchIrcClient.Handlers.cs" />
@@ -88,7 +85,7 @@
     <Compile Include="Enums\Api\Streams\StreamLanguage.cs" />
     <Compile Include="Enums\Api\Streams\StreamType.cs" />
     <Compile Include="Enums\Api\Users\BroadcasterType.cs" />
-    <Compile Include="Enums\Api\ApiErrorSource.cs" />
+    <Compile Include="Enums\Api\RestErrorSource.cs" />
     <Compile Include="Enums\UserType.cs" />
     <Compile Include="Enums\Debugger\DebugLevel.cs" />
     <Compile Include="Enums\Debugger\TimeStamp.cs" />
@@ -160,12 +157,14 @@
     <Compile Include="Extensions\ValidationExtensions.cs" />
     <Compile Include="Helpers\Json\JsonDeserializer.cs" />
     <Compile Include="Helpers\Json\TimeSpanConverter.cs" />
+    <Compile Include="Interfaces\Api\IOAuthResponse.cs" />
     <Compile Include="Interfaces\Api\IDataPage.cs" />
     <Compile Include="Interfaces\Api\IData.cs" />
     <Compile Include="Interfaces\Clients\Irc\ITags.cs" />
     <Compile Include="Interfaces\Clients\Irc\Twitch\ISharedRoomStateTags.cs" />
     <Compile Include="Interfaces\Clients\Irc\Twitch\ISharedUserStateTags.cs" />
     <Compile Include="Interfaces\Clients\Irc\Twitch\ISharedPrivmsgTags.cs" />
+    <Compile Include="Models\Api\OAuthResponse.cs" />
     <Compile Include="Models\Api\ClientHandler.cs" />
     <Compile Include="Models\Api\ClientInfo.cs" />
     <Compile Include="Models\Api\Clips\ClipCreationQueryParameters.cs" />
@@ -176,8 +175,8 @@
     <Compile Include="Models\Api\DataPage.cs" />
     <Compile Include="Models\Api\Data.cs" />
     <Compile Include="Models\Api\Games\TopGamesQueryParameters.cs" />
-    <Compile Include="Models\Api\RequestInfo.cs" />
-    <Compile Include="Models\Api\ApiException.cs" />
+    <Compile Include="Models\Api\HelixInfo.cs" />
+    <Compile Include="Models\Api\RestException.cs" />
     <Compile Include="Models\Api\StatusCodeSettings.cs" />
     <Compile Include="Models\Api\Streams\Hearthstone.cs" />
     <Compile Include="Models\Api\Streams\HearthstoneHero.cs" />
@@ -198,16 +197,16 @@
     <Compile Include="Models\Api\QueryParameterAttribute.cs" />
     <Compile Include="Models\Api\Streams\StreamsQueryParameters.cs" />
     <Compile Include="Models\Api\Users\FollowsQueryParameters.cs" />
-    <Compile Include="Interfaces\Api\IApiResponse.cs" />
+    <Compile Include="Interfaces\Api\IHelixResponse.cs" />
     <Compile Include="Interfaces\Api\IQueryParameters.cs" />
     <Compile Include="Models\Api\Pagination.cs" />
-    <Compile Include="Models\Api\ApiError.cs" />
-    <Compile Include="Models\Api\ApiResponse.cs" />
+    <Compile Include="Models\Api\RestError.cs" />
+    <Compile Include="Models\Api\HelixResponse.cs" />
     <Compile Include="Models\Api\Streams\Stream.cs" />
     <Compile Include="Models\Api\Users\Follow.cs" />
     <Compile Include="Models\Api\Users\User.cs" />
     <Compile Include="Models\Api\RateLimit.cs" />
-    <Compile Include="Models\Api\ApiRequestSettings.cs" />
+    <Compile Include="Models\Api\RestSettings.cs" />
     <Compile Include="Models\Api\Users\UsersQueryParameters.cs" />
     <Compile Include="Models\Api\Videos\VideosQueryParameters.cs" />
     <Compile Include="Models\Clients\Irc\IrcMessage.cs" />
@@ -233,9 +232,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\EnumCacheUtil.cs" />
     <Compile Include="Utilities\ExceptionUtil.cs" />
-    <Compile Include="Utilities\PagingUtil.cs" />
+    <Compile Include="Utilities\OAuthUtil.cs" />
     <Compile Include="Utilities\RegexPatternUtil.cs" />
-    <Compile Include="Utilities\RestRequestUtil.cs" />
+    <Compile Include="Utilities\RestUtil.cs" />
     <Compile Include="Utilities\TagsUtil.cs" />
     <Compile Include="Utilities\TwitchUtil.cs" />
   </ItemGroup>
